[project]
name = "jd-intelligence-system"
version = "0.1.0"
description = "RAG pipeline for job descriptions: OpenAI embeddings, Chroma ingestion, and hybrid retrieval (dense, BM25, MMR, ensemble, compression)"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "chromadb>=1.5.9",
    "jupyter>=1.1.1",
    "langchain>=1.3.1",
    "langchain-classic>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.2.1",
    "langchain-text-splitters>=0.3.0",
    "openai>=2.37.0",
    "python-dotenv>=1.2.2",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.5.1",
    "streamlit>=1.57.0",
    "torchvision>=0.27.0",
]
